--- a/RenameFilesScript.ipynb
+++ b/RenameFilesScript.ipynb
@@ -26,8 +26,35 @@
     }
    ],
    "source": [
-    "for i, filename in enumerate(os.listdir('Test')):\n",
-    "            os.rename(\"/Users/PwintMin/Documents/Github/PizzaPie\" + \"/\" + filename,\"PizzaTest\" + str(i))"
+    "import warnings   \n",
+    "nimage = 210 #Number of photos that you want to change\n",
+    "i = 0\n",
+    "nrow = 224\n",
+    "ncol = 224\n",
+    "dir_name = '/Users/Htoo Min/Documents/GitHub/PizzaPie/Test' #Also change depending on what computer you are on\n",
+    "#Converts the names of the images\n",
+    "for photo in os.listdir(dir_name):\n",
+    "    print(\"path\", dir_name, \"filename\", photo, dir_name+\"/\"+photo)  \n",
+    "    \n",
+    "    # Read image from file\n",
+    "    im = skimage.io.imread(dir_name+\"/\"+photo)\n",
+    "        \n",
+    "    # Resize images\n",
+    "    im1 = skimage.transform.resize(im,(nrow,ncol),mode='constant')\n",
+    "                \n",
+    "    # Convert to uint8, suppress the warning about the precision loss\n",
+    "    with warnings.catch_warnings():\n",
+    "        warnings.simplefilter(\"ignore\")\n",
+    "        im2 = skimage.img_as_ubyte(im1)\n",
+    "    \n",
+    "    # Save the image\n",
+    "    local_name = '{0:s}/{1:s}_{2:04d}.jpg'.format(dir_name,\"pizza\", i)   #Will name items in format pizza_000n\n",
+    "    print(\"lcl\", local_name)\n",
+    "    skimage.io.imsave(local_name, im2)      \n",
+    "    print(local_name)\n",
+    "    i = i + 1        \n",
+    "    if (i >= nimage):        \n",
+    "        break"
    ]
   },
   {
